Bug 255417 - Display pb: using custom icon not working
Summary: Display pb: using custom icon not working
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-27 17:48 UTC by Sabine Faure
Modified: 2010-11-12 17:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-10-27 17:48:57 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The icons associated to folders are not displayed on the N900.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on your Imap account
- Select an inbox subfolder (ex: folder A)
- Open the 'Actions' tab
- Click on 'Edit'
- Click on 'Edit folder'
- Check the 'Use custom icon' check box
- Click on 'Ok'

Actual Results:  
No folder icon is displayed in front of the folder name. Nothing changes so it seems that this functionality has not been implemented yet.

Expected Results:  
I am guessing that a folder icon like the one displayed near the 'Use custom icon' check box should be displayed.

Note: No matter on which folder you try to activate that functionality no icon is displayed in front of the name atm (ex: Local Folders/drafts, Imap account/Inbox...)

N900, 4:4.6~20101026.1190044-1maemo1.1189579
Comment 1 Till Adam 2010-11-11 09:17:57 UTC
SVN commit 1195461 by tilladam:

Hide the custom collection icon configuration on mobile.

We don't show these icons anywhere, so the config option is confusing.

BUG: 255417

 M  +4 -0      collectiongeneralpropertiespage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195461
Comment 2 Sabine Faure 2010-11-12 17:58:54 UTC
It is corrected now.

The 'Use custom icon' check box has been removed since no icon is displayed next to folders in Kmail-mobile

N900, 4:4.6~20101112.1195855-1maemo1.1195857