Hide the custom collection icon configuration on mobile.

We don't show these icons anywhere, so the config option is confusing.

BUG: 255417

svn path=/trunk/KDE/kdepimlibs/; revision=1195461